Fix empty email in notification by providing it
